<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="#ffa500"
            android:gravity="center"
            android:text="@string/this_is_an_orange_textview" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="#e3ffff"
            android:gravity="center"
            android:text="@string/this_is_a_green_textview" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:background="#46f1f3"
            android:gravity="center"
            android:text="@string/this_is_a_blue_textview" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="0.2">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.33"
            android:background="#79cbc5"
            android:gravity="center"
            android:text="@string/this_is_a_button"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.33"
            android:src="@drawable/palette_icon_background" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="0.33"
            android:background="#a2c99a"
            android:gravity="center"
            android:text="@string/this_is_a_green_button"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:background="#fcca59"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_an_edittext" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/this_is_a_new_edittext" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="#46f1f3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/notify_me"
                android:textAppearance="?android:textAppearanceLarge" />

            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/auto_back_up"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#00ab9e" />

        <RatingBar
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:isIndicator="true"
            android:progressTint="#f64784"
            android:rating="4"
            android:numStars="5" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#00ab9e" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="wrap_content"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_height="wrap_content"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceLarge"
                android:layout_height="wrap_content"/>

        </RadioGroup>

    </LinearLayout>

</LinearLayout>